[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/assets/UI/StartButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/title.png" type="Texture" id=2]
[ext_resource path="res://scenes/assets/UI/OptionsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/assets/UI/ExitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/assets/UI/CompanyButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/assets/UI/InputActionSetting.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/LeagueGothic_24.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/s_menu/s_menu.gd" type="Script" id=8]
[ext_resource path="res://resources/LeagueGothic-Regular.otf" type="DynamicFontData" id=9]
[ext_resource path="res://resources/LeagueGothic_48.tres" type="DynamicFont" id=10]
[ext_resource path="res://scenes/assets/UI/UI_Theme.tres" type="Theme" id=11]
[ext_resource path="res://scenes/s_menu/DisplayMode.gd" type="Script" id=12]
[ext_resource path="res://scenes/s_menu/PhotoFolderButton.gd" type="Script" id=13]
[ext_resource path="res://scenes/s_menu/DisplayFPSButton.gd" type="Script" id=14]
[ext_resource path="res://scenes/s_menu/DisplayReticleButton.gd" type="Script" id=15]
[ext_resource path="res://scenes/s_menu/InvertMouseButtons.gd" type="Script" id=16]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 9 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 80.0
margin_right = -100.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="MainMenu/Menu"]
margin_right = 1080.0
margin_bottom = 140.0
texture = ExtResource( 2 )

[node name="CenterRow" type="HBoxContainer" parent="MainMenu/Menu"]
visible = false
margin_top = 144.0
margin_right = 1080.0
margin_bottom = 540.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="MainMenu/Menu/CenterRow"]
margin_right = 876.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 2

[node name="StartBtn" parent="MainMenu/Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
margin_top = 196.0
margin_right = 876.0
margin_bottom = 256.0
title = "LABEL_START_GAME"
type = 4

[node name="OptionsBtn" parent="MainMenu/Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 266.0
margin_right = 876.0
margin_bottom = 326.0
custom_styles/focus = SubResource( 1 )
title = "Options"
link = "Options"
type = 3

[node name="ExitBtn" parent="MainMenu/Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 336.0
margin_right = 876.0
margin_bottom = 396.0
focus_neighbour_bottom = NodePath("../StartBtn")
custom_styles/focus = SubResource( 1 )
title = "Exit"

[node name="CompanyBtn" parent="MainMenu/Menu/CenterRow" instance=ExtResource( 5 )]
margin_left = 880.0
margin_bottom = 396.0
focus_neighbour_top = NodePath("../Buttons/StartBtn")
focus_neighbour_right = NodePath("../Buttons/StartBtn")
focus_neighbour_bottom = NodePath("../Buttons/StartBtn")
custom_styles/focus = SubResource( 1 )
title = "V0.0.1"
link = "https://learz.itch.io/"
type = 1

[node name="Options" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Options"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 40.0
margin_right = -50.0
margin_bottom = -40.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="Options"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 80.0
margin_right = -100.0
margin_bottom = -80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLabel" type="Label" parent="Options/Menu"]
margin_right = 1080.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.592157, 0.227451, 1 )
text = "Options"

[node name="VBoxContainer" type="HBoxContainer" parent="Options/Menu"]
margin_top = 87.0
margin_right = 1080.0
margin_bottom = 490.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Input" type="VBoxContainer" parent="Options/Menu/VBoxContainer"]
margin_right = 476.0
margin_bottom = 403.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputSettingsLabel" type="Label" parent="Options/Menu/VBoxContainer/Input"]
margin_right = 476.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 10 )
text = "Input Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputSettings" type="HBoxContainer" parent="Options/Menu/VBoxContainer/Input"]
margin_top = 62.0
margin_right = 476.0
margin_bottom = 403.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInputs" type="VBoxContainer" parent="Options/Menu/VBoxContainer/Input/InputSettings"]
margin_right = 236.0
margin_bottom = 341.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLabel" type="Label" parent="Options/Menu/VBoxContainer/Input/InputSettings/PlayerInputs"]
margin_right = 236.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 7 )
text = "Player"

[node name="Move Forward" parent="Options/Menu/VBoxContainer/Input/InputSettings/PlayerInputs" instance=ExtResource( 6 )]
margin_top = 34.0
margin_right = 236.0
margin_bottom = 64.0
focus_neighbour_left = NodePath("../../../../../BackBtn")
actionName = "Move Forward"
realActionName = "move_forward"

[node name="Move Backward" parent="Options/Menu/VBoxContainer/Input/InputSettings/PlayerInputs" instance=ExtResource( 6 )]
margin_top = 68.0
margin_right = 236.0
margin_bottom = 98.0
focus_neighbour_left = NodePath("../../../../../BackBtn")
actionName = "Move Backward"
realActionName = "move_backward"

[node name="Move Left" parent="Options/Menu/VBoxContainer/Input/InputSettings/PlayerInputs" instance=ExtResource( 6 )]
margin_top = 102.0
margin_right = 236.0
margin_bottom = 132.0
focus_neighbour_left = NodePath("../../../../../BackBtn")
actionName = "Move Left"
realActionName = "move_left"

[node name="Move Right" parent="Options/Menu/VBoxContainer/Input/InputSettings/PlayerInputs" instance=ExtResource( 6 )]
margin_top = 136.0
margin_right = 236.0
margin_bottom = 166.0
focus_neighbour_left = NodePath("../../../../../BackBtn")
actionName = "Move Right"
realActionName = "move_right"

[node name="Run" parent="Options/Menu/VBoxContainer/Input/InputSettings/PlayerInputs" instance=ExtResource( 6 )]
margin_top = 170.0
margin_right = 236.0
margin_bottom = 200.0
focus_neighbour_left = NodePath("../../../../../BackBtn")
actionName = "Run"
realActionName = "move_sprint"

[node name="Jump" parent="Options/Menu/VBoxContainer/Input/InputSettings/PlayerInputs" instance=ExtResource( 6 )]
margin_top = 204.0
margin_right = 236.0
margin_bottom = 234.0
focus_neighbour_left = NodePath("../../../../../BackBtn")

[node name="Interact" parent="Options/Menu/VBoxContainer/Input/InputSettings/PlayerInputs" instance=ExtResource( 6 )]
margin_top = 238.0
margin_right = 236.0
margin_bottom = 268.0
focus_neighbour_left = NodePath("../../../../../BackBtn")
actionName = "Interact"
realActionName = "action"

[node name="Show Hide Phone" parent="Options/Menu/VBoxContainer/Input/InputSettings/PlayerInputs" instance=ExtResource( 6 )]
margin_top = 272.0
margin_right = 236.0
margin_bottom = 302.0
focus_neighbour_left = NodePath("../../../../../BackBtn")
actionName = "Show/Hide Phone"
realActionName = "phone"

[node name="InvertMouseButtons" type="CheckButton" parent="Options/Menu/VBoxContainer/Input/InputSettings/PlayerInputs"]
margin_top = 306.0
margin_right = 236.0
margin_bottom = 338.0
custom_fonts/font = ExtResource( 7 )
button_mask = 3
text = "Invert Mouse Buttons"
flat = true
script = ExtResource( 16 )

[node name="InterfaceInputs" type="VBoxContainer" parent="Options/Menu/VBoxContainer/Input/InputSettings"]
margin_left = 256.0
margin_right = 476.0
margin_bottom = 341.0
size_flags_vertical = 3

[node name="MenusLabel" type="Label" parent="Options/Menu/VBoxContainer/Input/InputSettings/InterfaceInputs"]
margin_right = 220.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 7 )
text = "Menus"

[node name="Menu Up" parent="Options/Menu/VBoxContainer/Input/InputSettings/InterfaceInputs" instance=ExtResource( 6 )]
margin_top = 34.0
margin_right = 220.0
margin_bottom = 64.0
actionName = "Menu Up"
realActionName = "ui_up"

[node name="Menu Down" parent="Options/Menu/VBoxContainer/Input/InputSettings/InterfaceInputs" instance=ExtResource( 6 )]
margin_top = 68.0
margin_right = 220.0
margin_bottom = 98.0
actionName = "Menu Down"
realActionName = "ui_down"

[node name="Menu Left" parent="Options/Menu/VBoxContainer/Input/InputSettings/InterfaceInputs" instance=ExtResource( 6 )]
margin_top = 102.0
margin_right = 220.0
margin_bottom = 132.0
actionName = "Menu Left"
realActionName = "ui_left"

[node name="Menu Right" parent="Options/Menu/VBoxContainer/Input/InputSettings/InterfaceInputs" instance=ExtResource( 6 )]
margin_top = 136.0
margin_right = 220.0
margin_bottom = 166.0
actionName = "Menu Right"
realActionName = "ui_right"

[node name="Accept" parent="Options/Menu/VBoxContainer/Input/InputSettings/InterfaceInputs" instance=ExtResource( 6 )]
margin_top = 170.0
margin_right = 220.0
margin_bottom = 200.0
actionName = "Accept"
realActionName = "ui_accept"

[node name="Cancel" parent="Options/Menu/VBoxContainer/Input/InputSettings/InterfaceInputs" instance=ExtResource( 6 )]
margin_top = 204.0
margin_right = 220.0
margin_bottom = 234.0
actionName = "Cancel"
realActionName = "ui_cancel"

[node name="Graphics" type="VBoxContainer" parent="Options/Menu/VBoxContainer"]
margin_left = 480.0
margin_right = 714.0
margin_bottom = 403.0

[node name="GraphicsSettingsLabel" type="Label" parent="Options/Menu/VBoxContainer/Graphics"]
margin_right = 234.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 10 )
text = "Graphics Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/Menu/VBoxContainer/Graphics"]
margin_top = 62.0
margin_right = 234.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 7 )
text = "Display Mode"

[node name="DisplayMode" type="MenuButton" parent="Options/Menu/VBoxContainer/Graphics"]
margin_top = 96.0
margin_right = 234.0
margin_bottom = 126.0
focus_mode = 2
custom_fonts/font = ExtResource( 7 )
custom_constants/hseparation = 20
button_mask = 3
text = "Display Mode"
flat = false
items = [ "Windowed", null, 0, false, false, 0, 0, null, "", false, "Fullscreen", null, 0, false, false, 1, 0, null, "", false, "Borderless Window", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 12 )

[node name="PhotoFolderLabel" type="Label" parent="Options/Menu/VBoxContainer/Graphics"]
margin_top = 130.0
margin_right = 234.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "Photo Folder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhotoFolderButton" type="Button" parent="Options/Menu/VBoxContainer/Graphics"]
margin_top = 164.0
margin_right = 234.0
margin_bottom = 194.0
custom_fonts/font = ExtResource( 7 )
button_mask = 3
text = "Access Photos"
script = ExtResource( 13 )

[node name="DisplayFPSButton" type="CheckButton" parent="Options/Menu/VBoxContainer/Graphics"]
margin_top = 198.0
margin_right = 234.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 7 )
button_mask = 3
text = "Display FPS"
flat = true
script = ExtResource( 14 )

[node name="DisplayReticleButton" type="CheckButton" parent="Options/Menu/VBoxContainer/Graphics"]
margin_top = 234.0
margin_right = 234.0
margin_bottom = 266.0
custom_fonts/font = ExtResource( 7 )
button_mask = 3
text = "Display Reticle"
flat = true
script = ExtResource( 15 )

[node name="BackBtn" parent="Options/Menu" instance=ExtResource( 4 )]
margin_top = 500.0
margin_bottom = 560.0
focus_neighbour_bottom = NodePath("../StartBtn")
custom_styles/focus = SubResource( 1 )
title = "Back"
link = "MainMenu"
type = 3

[node name="Tween" type="Tween" parent="."]
